# RobotProject

./: Boost.h  CMakeLists.txt  CMakeRobot.cpp  CMakeRobot.h  Class diagramm  ClassDiagramm.txt  Detector.cpp  Detector.h  OpenCVRobot.sln  OpencvRobot.cpp  README.md  StateDiagramm.txt  Test.cpp  Translator.cpp  Translator.h  Use-case.txt  boost.cpp  main.cpp
CMake/: CMakeRobot.cpp  READ.ME.txt  main.cpp
Cmake/: main.cpp
Diagramm/: StateDiagramm.txt
Diagramms/: StateDiagramm.txt  Use-case.txt
